record stop stuck

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,3 +49,15 @@
 .open .hamburger-bottom {
     transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
+
+.edit-button,
+.delete-button,
+.replace-button,
+.replace-stop-button {
+    margin: 5px;
+    font-weight: 500;
+    border: 1px solid black;
+    border-radius: 10%;
+    padding-left: 5px;
+    padding-right: 5px;
+}
